# NetPort

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  MEIP.md  README.md
envtest/: CMakeLists.txt  cppleven.cpp
include/: network
include/net/: MEISocket.hpp  MEISystem.hpp  TCPConnection.h  TCPConnection.hpp  TCPConnectionTemplates.hpp  UDPSocket.hpp  crypt.hpp  network  network.h  network_common.h  network_common.hpp
src/: IMEI.hpp  MEISocket.cpp  MEISystem.cpp  Socket.cpp  TCPConnection.cpp  TCPConnectionTemplates.cpp  UDPSocket.cpp  arc4random.cpp  config.in  crypt.cpp  network.cpp  network_os.h
src/test-client/: client.cpp
src/test-server/: server.cpp
